language/move-model/tests/sources/pragma_intrinsic_for_struct_err.exp
error: invalid intrinsic declaration
   ┌─ tests/sources/pragma_intrinsic_for_struct_err.move:15:9
   │
15 │         pragma intrinsic = true;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^

error: no such intrinsic type: intrinsics::S
   ┌─ tests/sources/pragma_intrinsic_for_struct_err.move:21:9
   │
21 │         pragma intrinsic = 0x1::intrinsics::S;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: number of type parameters mismatch
   ┌─ tests/sources/pragma_intrinsic_for_struct_err.move:28:9
   │
28 │         pragma intrinsic = Vector;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = the intrinsic type has 1 type parameters
   = the struct declaration has 2 type parameters

error: number of type parameters mismatch
   ┌─ tests/sources/pragma_intrinsic_for_struct_err.move:35:9
   │
35 │         pragma intrinsic = intrinsics::Map;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = the intrinsic type has 2 type parameters
   = the struct declaration has 1 type parameters

error: ability modifiers mismatch
   ┌─ tests/sources/pragma_intrinsic_for_struct_err.move:41:9
   │
41 │         pragma intrinsic = 0x1::intrinsics::Event;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
